--- a/RochaissuesBot/Web.config
+++ b/RochaissuesBot/Web.config
@@ -4,10 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
+  <appSettings  file="private.config">
     <!-- update these with your appid and one of your appsecret keys-->
     <add key="AppId" value="YourAppId" />
     <add key="AppSecret" value="YourAppSecret" />
+	  <add key="LuisKey" value="Your own ID here" />
+	  <add key="LuisSubscription" value="Your own subscription key here" />
+	  <add key="IssueTrackingLocation" value="localhost" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
