--- a/RochaissuesBot/Web.config
+++ b/RochaissuesBot/Web.config
@@ -10,7 +10,8 @@
     <add key="AppSecret" value="YourAppSecret" />
 	  <add key="LuisKey" value="Your own ID here" />
 	  <add key="LuisSubscription" value="Your own subscription key here" />
-	  <add key="IssueTrackingLocation" value="localhost" />
+	  <add key="IssueTrackingLocation" value="http://localhost/GeneXusIssueTrackingTilo.NetEnvironment" />
+	  <add key="SoupNaziLocation" value="http://fsartech/Goomez/images/soup_nazi.jpg" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -38,7 +39,8 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
