improved build and deploy system at AppVeyor

--- a/RochaissuesBot/Web.config
+++ b/RochaissuesBot/Web.config
@@ -7,10 +7,12 @@
 	<appSettings  file="private.config">
 		<add key="AppId" value="YourAppId" />
 		<add key="AppSecret" value="YourAppSecret" />
-		<add key="LuisKey" value="Your own ID here" />
-		<add key="LuisSubscription" value="Your own subscription key here" />
-		<add key="IssueTrackingLocation" value="http://localhost/GeneXusIssueTrackingTilo.NetEnvironment" />
-		<add key="SoupNaziLocation" value="http://fsartech/Goomez/images/soup_nazi.jpg" />
+		<add key="LuisKey" value="YourOwnIDHere" />
+		<add key="LuisSubscription" value="YourOwnSubscriptionKeyHere" />
+		<add key="IssueTrackingLocation" value="ProductionIssueTrackingLocation" />
+		<add key="SoupNaziLocation" value="ProductionSoupNaziLocation" />
+		<add key="IssueTrackingUserName" value="GXUsername" />
+		<add key="IssueTrackingPassword" value="GXPassword" />
 	</appSettings>
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
