removed deploy from appveyor

--- a/RochaissuesBot/Web.config
+++ b/RochaissuesBot/Web.config
@@ -31,7 +31,7 @@
 		<defaultDocument>
 			<files>
 				<clear />
-				<add value="default.htm" />
+				<add value="default.aspx" />
 			</files>
 		</defaultDocument>
 
