--- a/RochaissuesBot/RochaissuesBot.csproj
+++ b/RochaissuesBot/RochaissuesBot.csproj
@@ -42,6 +42,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Bot.Builder, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bot.Builder.1.1.0.0\lib\net45\Microsoft.Bot.Builder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Bot.Connector, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bot.Connector.1.0.0.0\lib\net45\Microsoft.Bot.Connector.dll</HintPath>
       <Private>True</Private>
@@ -112,12 +120,17 @@
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Intents\Command\ClearCommand.cs" />
+    <Compile Include="Intents\Command\ListCommand.cs" />
+    <Compile Include="Intents\Command\SearchCommand.cs" />
     <Compile Include="Intents\ShowIssues.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IssueTracking\IssuesByText.cs" />
+    <Compile Include="IssueTracking\IssuesDP.cs" />
     <Compile Include="IssueTracking\SDTs\SearchResult.cs" />
     <Compile Include="LUIS\LuisManager.cs" />
     <Compile Include="LUIS\LuisResponse.cs" />
