missing credentials for registration

--- a/RochaissuesBot/Web.config
+++ b/RochaissuesBot/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
 	<appSettings file="private.config">
-		<add key="AppId" value="YourAppId" />
-		<add key="AppSecret" value="YourAppSecret" />
+		<add key="BotId" value="GenexusIssueTrackingBot" />
+		<add key="MicrosoftAppId" value="YourAppId" />
+		<add key="MicrosoftAppPassword" value="YourAppSecret" />
 		<add key="LuisKey" value="YourOwnIDHere" />
 		<add key="LuisSubscription" value="YourOwnSubscriptionKeyHere" />
 		<add key="IssueTrackingLocation" value="ProductionIssueTrackingLocation" />
